@@ -316,6 +316,7 @@
           --add-opens java.base/java.util.concurrent=ALL-UNNAMED
           --add-opens java.base/java.util.concurrent.atomic=ALL-UNNAMED
           --add-opens java.base/java.nio=ALL-UNNAMED
+          --add-opens java.logging/java.util.logging=ALL-UNNAMED
 
           --add-exports java.base/jdk.internal.ref=ALL-UNNAMED
           --add-exports java.base/jdk.internal.misc=ALL-UNNAMED
